# rust-notes

./: README.md
hello-world/src/: main.rs
modularity/: Cargo.toml
modularity/src/: another_lib_v2.rs  lib.rs  main.rs
snake-game/: .eslintignore  .eslintrc  .gitignore  .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
snake-game/public/: 602.bootstrap.js  bootstrap.js  index.html
snake-game/server/: index.js  package.json
snake-game/src/: lib.rs  main.rs
snake-game/www/: .eslintrc  .gitignore  bootstrap.js  bootstrap.ts  index.html  index.js  index.ts  package.json  pnpm-lock.yaml  webpack.common.js  webpack.dev.js
snake-game/www/public/: 17.bootstrap.js  548.bootstrap.js  bootstrap.js  index.html  index.js
snake-game/www/utils/: rnd.ts
