[package]
name = "modularity"
version = "0.1.0"
edition = "2021"
rust-version = "1.68"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "modularity"
path = "src/main.rs" # default is 'src/main.rs', only needed if the executable is in another path https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
