[package]
name = "snake-game"
version = "0.1.0"
edition = "2021"
rust-version = "1.68" # locks the rust version https://doc.rust-lang.org/cargo/reference/manifest.html#the-rust-version-field

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "snake_game"
path = "src/main.rs" # default is 'src/main.rs', only needed if the executable is in another path https://doc.rust-lang.org/cargo/reference/cargo-targets.html#binaries
